# ncnn-android-nanodet

./: README.md  _clang-format
app/: build.gradle
app/src/main/assets/: nanodet-plus-m-1.5x_416_int8.param  nanodet-plus-m_320.param
app/src/main/jni/: CMakeLists.txt  fastestdet.cpp  fastestdet.h  nanodetncnn.cpp  nanodetplus.cpp  nanodetplus.h
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
